<resources>
    <string name="app_name">HHTally</string>
    <string name="label_username">用户名</string>
    <string name="label_password">密码</string>
    <string name="logo">品牌</string>
    <string name="login">登录</string>
    <string name="hint_register">没有账号?来注册吧</string>
    <string name="hint_login_error">用户名或密码错误</string>
    <string name="label_confirm_password">确认密码</string>
    <string name="register">注册</string>
    <string name="test">测试</string>
    <string name="profile">我的</string>
    <string name="receipt">账单</string>
    <string name="chart">图表</string>
    <string name="empty_data_tips">暂无数据</string>
    <string name="string_money_zero">0.00</string>
    <string name="take_a_photo">拍照</string>
    <string name="string_label">标签</string>
    <string name="string_time">时间</string>
    <string name="string_shopkeeper">商家</string>
    <string name="string_remark">备注</string>
    <string name="string_yuan">￥</string>
    <string name="string_click_to_input">点击输入</string>
    <string name="string_remark_hint">...</string>

    <string name="string_commit">提交</string>
    <string name="string_add">添加</string>
    <string name="string_search">搜索</string>
    <string name="recent_week">近7天账单</string>
    <string name="data_range">日期选择</string>
    <string name="content_description_recent_week">选择查看近7天的账单</string>
    <string name="content_description_data_range">选择想要查看账单的日期</string>
    <string name="date">日期</string>
    <string name="expense">支出</string>
    <string name="income">收入</string>
    <string name="year">年</string>
    <string name="month">月</string>
    <string name="string_type">类型</string>
    <string name="take_photo">拍照</string>
    <string name="from_album">从相册获取</string>
    <string name="string_cancel">取消</string>

    <string name="string_delete">删除</string>
    <string name="yearly_report">年度报表</string>
    <string name="monthly_report">月度报表</string>
    <string name="statistics">统计</string>
    <string name="title_activity_yearly_report">YearlyReportActivity</string>
    <string name="string_all_time">全部时间</string>
    <string name="string_all_label">所有标签</string>
    <string name="add_label">添加标签</string>
    <string name="string_update">修改</string>

</resources>
