<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_receipt">

    <fragment
        android:id="@+id/navigation_chart"
        android:name="com.zzp.hhtally.ui.chart.ChartFragment"
        android:label="@string/chart"
        tools:layout="@layout/fragment_chart" />

    <fragment
        android:id="@+id/navigation_receipt"
        android:name="com.zzp.hhtally.ui.receipt.ReceiptFragment"
        android:label="@string/receipt"
        tools:layout="@layout/fragment_receipt" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.zzp.hhtally.ui.profile.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile" />
</navigation>