<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:menu="@menu/add_receipt_toolbar_menu"
        app:title="记一笔"
        app:titleCentered="true" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingStart="20dp"
        android:paddingTop="20dp"
        android:paddingEnd="12dp"
        android:paddingBottom="12dp">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/string_yuan"
            android:textColor="@color/md_theme_light_primary"
            android:textSize="55sp" />

        <EditText
            android:id="@+id/et_money"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:autofillHints=""
            android:background="@null"
            android:cursorVisible="false"
            android:hint="@string/string_money_zero"
            android:inputType="numberDecimal|number"
            android:textColor="@color/md_theme_light_primary"
            android:textColorHint="@color/md_theme_light_primary"
            android:textSize="60sp" />

        <!--        <com.google.android.material.textview.MaterialTextView-->
        <!--            android:id="@+id/tv_money"-->
        <!--            android:layout_width="150dp"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:text="@string/string_money_zero"-->
        <!--            android:textColor="@color/md_theme_light_primary"-->
        <!--            android:textSize="60sp" />-->

        <!--        <Space-->
        <!--            android:layout_width="0dp"-->
        <!--            android:layout_height="match_parent"-->
        <!--            android:layout_weight="1" />-->

        <LinearLayout
            android:id="@+id/layout_photo"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="@drawable/bg_layout_photo"
            android:gravity="center"
            android:orientation="vertical">

            <com.google.android.material.imageview.ShapeableImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_photo" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/take_a_photo" />
        </LinearLayout>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1.5dp"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="10dp"
        android:background="@color/md_theme_light_surfaceTint" />

    <LinearLayout
        android:id="@+id/layout_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingTop="10dp"
        android:paddingBottom="10dp">

        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:src="@drawable/ic_pay_type" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/string_type"
            android:textSize="16sp" />

        <LinearLayout
            android:id="@+id/layout_expense"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/bg_pay_type_selector"
            android:gravity="center"
            android:paddingTop="3dp"
            android:paddingBottom="3dp">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/expense"
                android:textColor="@drawable/bg_pay_type_tv_selector" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_income"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_pay_type_selector"
            android:gravity="center"
            android:paddingTop="3dp"
            android:paddingBottom="3dp">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/income"
                android:textColor="@drawable/bg_pay_type_tv_selector" />
        </LinearLayout>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="10dp"
        android:background="@color/md_theme_light_secondary" />

    <LinearLayout
        android:id="@+id/layout_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingTop="10dp"
        android:paddingBottom="10dp">

        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:src="@drawable/ic_label" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/string_label"
            android:textSize="16sp" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:textSize="16sp"
            tools:text="测试标签" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="10dp"
        android:background="@color/md_theme_light_secondary" />

    <LinearLayout
        android:id="@+id/layout_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingTop="10dp"
        android:paddingBottom="10dp">

        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:src="@drawable/ic_date" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/string_time"
            android:textSize="16sp" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:textSize="16sp"
            tools:text="2023/4/15" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="10dp"
        android:background="@color/md_theme_light_secondary" />

    <LinearLayout
        android:id="@+id/layout_shopkeeper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:src="@drawable/ic_shopkeeper" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/string_shopkeeper"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/et_shopkeeper"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginStart="25dp"
            android:autofillHints=""
            android:background="@null"
            android:hint="@string/string_click_to_input"
            android:inputType="text"
            android:paddingTop="10dp"
            android:paddingBottom="10dp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="10dp"
        android:background="@color/md_theme_light_secondary" />

    <LinearLayout
        android:id="@+id/layout_remark"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:gravity="start">

        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"

            android:layout_marginEnd="10dp"
            android:src="@drawable/ic_remark" />


        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/string_remark"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/et_remark"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="30dp"
            android:autofillHints=""
            android:background="@null"
            android:gravity="start"
            android:hint="@string/string_remark_hint"
            android:inputType="textMultiLine"
            android:maxLines="5"
            android:paddingTop="10dp"
            android:paddingBottom="10dp" />

    </LinearLayout>

</LinearLayout>
