<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.imageview.ShapeableImageView
        android:layout_width="144dp"
        android:layout_height="144dp"
        app:srcCompat="@drawable/ic_logo_48"
        android:id="@+id/imageViewLogo"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="128dp"
        android:contentDescription="@string/logo" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/input_layout_margin"
        android:layout_marginEnd="@dimen/input_layout_margin"
        android:layout_marginTop="@dimen/input_layout_margin"
        app:startIconDrawable="@drawable/ic_account_24"
        app:endIconDrawable="@drawable/ic_clear_24"
        app:endIconMode="clear_text"
        app:errorEnabled="true"
        app:layout_constraintTop_toBottomOf="@+id/imageViewLogo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:cursorVisible="true"
            android:hint="@string/label_username"
            android:maxLength="50"
            android:singleLine="true"
            android:textColor="?colorOnSurface"
            android:textSize="@dimen/hint_text_size"
            android:textColorHint="#757575" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/input_layout_margin"
        android:layout_marginEnd="@dimen/input_layout_margin"
        android:layout_marginTop="@dimen/input_layout_margin"
        app:startIconDrawable="@drawable/ic_password_24"
        app:passwordToggleEnabled="true"
        app:errorEnabled="true"
        app:layout_constraintTop_toBottomOf="@+id/til_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:cursorVisible="true"
            android:hint="@string/label_password"
            android:inputType="textPassword"
            android:maxLength="50"
            android:singleLine="true"
            android:textColor="?colorOnSurface"
            android:textSize="16sp"
            android:textColorHint="#757575" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/fab_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        android:text="@string/login"
        app:icon="@drawable/ic_login_24"
        app:layout_constraintTop_toBottomOf="@+id/til_password"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/text_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="32dp"
        android:autoLink="all"
        android:text="@string/hint_register"
        android:textSize="16sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/fab_login"
        app:layout_constraintTop_toBottomOf="@+id/til_password"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
