<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingTop="12dp"
    android:paddingBottom="24dp">

    <ImageView
        android:layout_width="144dp"
        android:layout_height="144dp"
        app:srcCompat="@drawable/ic_logo_48"
        android:id="@+id/imageViewLogo"
        android:contentDescription="@string/logo" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_name"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="24dp"
        app:startIconDrawable="@drawable/ic_account_24"
        app:endIconDrawable="@drawable/ic_clear_24"
        app:endIconMode="clear_text"
        app:errorEnabled="true" >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:cursorVisible="true"
            android:hint="@string/label_username"
            android:maxLength="50"
            android:singleLine="true"
            android:textColor="?colorOnSurface"
            android:textSize="16sp"
            android:textColorHint="#757575" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_password"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        app:errorEnabled="true"
        app:startIconDrawable="@drawable/ic_password_24"
        app:passwordToggleEnabled="true" >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:cursorVisible="true"
            android:hint="@string/label_password"
            android:inputType="textPassword"
            android:maxLength="50"
            android:singleLine="true"
            android:textColor="?colorOnSurface"
            android:textSize="16sp"
            android:textColorHint="#757575" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_confirm_password"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        app:errorEnabled="true"
        app:startIconDrawable="@drawable/ic_password_24"
        app:passwordToggleEnabled="true" >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:cursorVisible="true"
            android:hint="@string/label_confirm_password"
            android:inputType="textPassword"
            android:maxLength="50"
            android:singleLine="true"
            android:textColor="?colorOnSurface"
            android:textSize="16sp"
            android:textColorHint="#757575" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/fab_register"
        style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/register"
        app:icon="@drawable/ic_login_24"/>

    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/loading"
        style="@style/Widget.MaterialComponents.CircularProgressIndicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:indeterminate="true"
        android:visibility="gone" />

</LinearLayout>
